--- a/index.html
+++ b/index.html
@@ -1,11 +1,102 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Modulos 01</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+    <link rel="stylesheet" href="misEstilos.css">
+    <title>Pruebas</title>
 </head>
-    <body>
+<body>
+
+    <div class="container text-center "> 
         
-    </body>
+        <div class="row row-cols-auto justify-content-center">
+            <div class="col">
+               <h2 id="numerosOperaciones"></h2>
+            </div>
+        </div>
+        <div class="row m-2 row-cols-auto justify-content-center">
+            <div class="col">  
+                <button value="AC" class="operacionalesCalculo">AC</button>
+            </div>
+            <div class="col">
+                <button class="operacionalesCalculo"><i class="bi bi-database-fill"></i></button>
+            </div>
+            <div class="col">
+                <button value="%" class="operacionalesCalculo">%</button>
+            </div>
+            <div class="col">
+                <button value="/" class="calculoSigno">/</button>
+            </div>
+        </div>
+        <div class="row m-2 row-cols-auto justify-content-center">
+            <div class="col">
+                <button value="7">7</button>
+            </div>
+            <div class="col">
+                <button value="8">8</button>
+            </div>
+            <div class="col">
+                <button value="9">9</button>
+            </div>
+            <div class="col">
+                <button value="x" class="calculoSigno">X</button>
+            </div>
+        </div>
+        <div class="row m-2 row-cols-auto justify-content-center">
+            <div class="col">
+                <button value="4">4</button>
+            </div>
+            <div class="col">
+                <button value="5">5</button>
+            </div>
+            <div class="col">
+                <button value="6">6</button>
+            </div>
+            <div class="col">
+                <button value="-" class="calculoSigno">-</button>
+            </div>
+        </div>
+        <div class="row m-2 row-cols-auto justify-content-center">
+            <div class="col">
+                <button value="1">1</button>
+            </div>
+            <div class="col">
+                <button value="2">2</button>
+            </div>
+            <div class="col">
+                <button value="3">3</button>
+            </div>
+            <div class="col">
+                <button value="+" class="calculoSigno">+</button>
+            </div>
+        </div>
+        <div class="row m-2 row-cols-auto justify-content-center">
+            <div class="col">
+                <button><i class="bi bi-calculator"></i></button>
+            </div>
+            <div class="col">
+                <button value="0">0</button>
+            </div>
+            <div class="col">
+                <button value=",">,</button>
+            </div>
+            <div class="col">
+                <button value="=" class="calculoSigno" onclick="pruebaValores()">=</button>
+            </div>
+        </div>
+        <div class="row m-2 row-cols-auto justify-content-center"></div>
+
+        </div>
+
+    </div>
+
+
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+   <script src="main.js" type="module"></script>
+
+</body>
 </html>
